LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/PAN_NO__c.field-meta.xml
<CustomField>
    <fullName>PAN_NO__c</fullName>
    <description>PAN_NO</description>
    <externalDeveloperName>PAN_NO</externalDeveloperName>
    <label>PAN_NO</label>
    <length>20</length>
    <type>Text</type>
</CustomField>