LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/PAN_UP_DATE__c.field-meta.xml
<CustomField>
    <fullName>PAN_UP_DATE__c</fullName>
    <description>PAN_UP_DATE</description>
    <externalDeveloperName>PAN_UP_DATE</externalDeveloperName>
    <label>PAN_UP_DATE</label>
    <type>DateTime</type>
</CustomField>