LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/PAN_UP_USER__c.field-meta.xml
<CustomField>
    <fullName>PAN_UP_USER__c</fullName>
    <description>PAN_UP_USER</description>
    <externalDeveloperName>PAN_UP_USER</externalDeveloperName>
    <label>PAN_UP_USER</label>
    <length>100</length>
    <type>Text</type>
</CustomField>