LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/PE_INVESTOR1__c.field-meta.xml
<CustomField>
    <fullName>PE_INVESTOR1__c</fullName>
    <description>PE_INVESTOR1</description>
    <externalDeveloperName>PE_INVESTOR1</externalDeveloperName>
    <label>PE_INVESTOR1</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>