LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/PE_INVESTOR2__c.field-meta.xml
<CustomField>
    <fullName>PE_INVESTOR2__c</fullName>
    <description>PE_INVESTOR2</description>
    <externalDeveloperName>PE_INVESTOR2</externalDeveloperName>
    <label>PE_INVESTOR2</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>