LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/PE_INVESTOR3__c.field-meta.xml
<CustomField>
    <fullName>PE_INVESTOR3__c</fullName>
    <description>PE_INVESTOR3</description>
    <externalDeveloperName>PE_INVESTOR3</externalDeveloperName>
    <label>PE_INVESTOR3</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>