LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/POT_FEE__c.field-meta.xml
<CustomField>
    <fullName>POT_FEE__c</fullName>
    <description>POT_FEE</description>
    <externalDeveloperName>POT_FEE</externalDeveloperName>
    <label>POT_FEE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>