LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/POT_GROW_FEES__c.field-meta.xml
<CustomField>
    <fullName>POT_GROW_FEES__c</fullName>
    <description>POT_GROW_FEES</description>
    <externalDeveloperName>POT_GROW_FEES</externalDeveloperName>
    <label>POT_GROW_FEES</label>
    <length>8</length>
    <type>Text</type>
</CustomField>