LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/POTENTIAL_TO_GROW__c.field-meta.xml
<CustomField>
    <fullName>POTENTIAL_TO_GROW__c</fullName>
    <description>POTENTIAL_TO_GROW</description>
    <externalDeveloperName>POTENTIAL_TO_GROW</externalDeveloperName>
    <label>POTENTIAL_TO_GROW</label>
    <length>8</length>
    <type>Text</type>
</CustomField>