LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/PRIMARY_INDUSTRY__c.field-meta.xml
<CustomField>
    <fullName>PRIMARY_INDUSTRY__c</fullName>
    <description>PRIMARY_INDUSTRY</description>
    <externalDeveloperName>PRIMARY_INDUSTRY</externalDeveloperName>
    <label>PRIMARY_INDUSTRY</label>
    <length>25</length>
    <type>Text</type>
</CustomField>