LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/PROJ_MANAGER_ID__c.field-meta.xml
<CustomField>
    <fullName>PROJ_MANAGER_ID__c</fullName>
    <description>PROJ_MANAGER_ID</description>
    <externalDeveloperName>PROJ_MANAGER_ID</externalDeveloperName>
    <label>PROJ_MANAGER_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>