LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/QES_COMMENT__c.field-meta.xml
<CustomField>
    <fullName>QES_COMMENT__c</fullName>
    <description>QES_COMMENT</description>
    <externalDeveloperName>QES_COMMENT</externalDeveloperName>
    <label>QES_COMMENT</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>