LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/RECURRING_FLAG__c.field-meta.xml
<CustomField>
    <fullName>RECURRING_FLAG__c</fullName>
    <description>RECURRING_FLAG</description>
    <externalDeveloperName>RECURRING_FLAG</externalDeveloperName>
    <label>RECURRING_FLAG</label>
    <length>2</length>
    <type>Text</type>
</CustomField>