LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/REF_INTER_PERSON__c.field-meta.xml
<CustomField>
    <fullName>REF_INTER_PERSON__c</fullName>
    <description>REF_INTER_PERSON</description>
    <externalDeveloperName>REF_INTER_PERSON</externalDeveloperName>
    <label>REF_INTER_PERSON</label>
    <length>100</length>
    <type>Text</type>
</CustomField>