LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/REF_PERSON_GTI__c.field-meta.xml
<CustomField>
    <fullName>REF_PERSON_GTI__c</fullName>
    <description>REF_PERSON_GTI</description>
    <externalDeveloperName>REF_PERSON_GTI</externalDeveloperName>
    <label>REF_PERSON_GTI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>