LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/REF_PERSON_NAME__c.field-meta.xml
<CustomField>
    <fullName>REF_PERSON_NAME__c</fullName>
    <description>REF_PERSON_NAME</description>
    <externalDeveloperName>REF_PERSON_NAME</externalDeveloperName>
    <label>REF_PERSON_NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>