LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/REFERAL_COUNTRY__c.field-meta.xml
<CustomField>
    <fullName>REFERAL_COUNTRY__c</fullName>
    <description>REFERAL_COUNTRY</description>
    <externalDeveloperName>REFERAL_COUNTRY</externalDeveloperName>
    <label>REFERAL_COUNTRY</label>
    <length>8</length>
    <type>Text</type>
</CustomField>