LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/REFERAL_DETAIL__c.field-meta.xml
<CustomField>
    <fullName>REFERAL_DETAIL__c</fullName>
    <description>REFERAL_DETAIL</description>
    <externalDeveloperName>REFERAL_DETAIL</externalDeveloperName>
    <label>REFERAL_DETAIL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>