LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/REFERAL_OFFICE__c.field-meta.xml
<CustomField>
    <fullName>REFERAL_OFFICE__c</fullName>
    <description>REFERAL_OFFICE</description>
    <externalDeveloperName>REFERAL_OFFICE</externalDeveloperName>
    <label>REFERAL_OFFICE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>