LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/REFRRAL_DATE__c.field-meta.xml
<CustomField>
    <fullName>REFRRAL_DATE__c</fullName>
    <description>REFRRAL_DATE</description>
    <externalDeveloperName>REFRRAL_DATE</externalDeveloperName>
    <label>REFRRAL_DATE</label>
    <type>DateTime</type>
</CustomField>