LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/REG_NO__c.field-meta.xml
<CustomField>
    <fullName>REG_NO__c</fullName>
    <description>REG_NO</description>
    <externalDeveloperName>REG_NO</externalDeveloperName>
    <label>REG_NO</label>
    <length>25</length>
    <type>Text</type>
</CustomField>