LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/REGISTRATION_NO__c.field-meta.xml
<CustomField>
    <fullName>REGISTRATION_NO__c</fullName>
    <description>REGISTRATION_NO</description>
    <externalDeveloperName>REGISTRATION_NO</externalDeveloperName>
    <label>REGISTRATION_NO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>