LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/RELATED_GROUP_1__c.field-meta.xml
<CustomField>
    <fullName>RELATED_GROUP_1__c</fullName>
    <description>RELATED_GROUP_1</description>
    <externalDeveloperName>RELATED_GROUP_1</externalDeveloperName>
    <label>RELATED_GROUP_1</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>