LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/RELATION_MANG_ID__c.field-meta.xml
<CustomField>
    <fullName>RELATION_MANG_ID__c</fullName>
    <description>RELATION_MANG_ID</description>
    <externalDeveloperName>RELATION_MANG_ID</externalDeveloperName>
    <label>RELATION_MANG_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>