LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/RELATION_PARTNER_ID__c.field-meta.xml
<CustomField>
    <fullName>RELATION_PARTNER_ID__c</fullName>
    <description>RELATION_PARTNER_ID</description>
    <externalDeveloperName>RELATION_PARTNER_ID</externalDeveloperName>
    <label>RELATION_PARTNER_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>