LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/REVE_VAL__c.field-meta.xml
<CustomField>
    <fullName>REVE_VAL__c</fullName>
    <description>REVE_VAL</description>
    <externalDeveloperName>REVE_VAL</externalDeveloperName>
    <label>REVE_VAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>