LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/SECONDARY_INDUSTRY__c.field-meta.xml
<CustomField>
    <fullName>SECONDARY_INDUSTRY__c</fullName>
    <description>SECONDARY_INDUSTRY</description>
    <externalDeveloperName>SECONDARY_INDUSTRY</externalDeveloperName>
    <label>SECONDARY_INDUSTRY</label>
    <length>25</length>
    <type>Text</type>
</CustomField>