LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/SECTORNEW__c.field-meta.xml
<CustomField>
    <fullName>SECTORNEW__c</fullName>
    <description>SECTORNEW</description>
    <externalDeveloperName>SECTORNEW</externalDeveloperName>
    <label>SECTORNEW</label>
    <length>8</length>
    <type>Text</type>
</CustomField>