LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/SEGMENT__c.field-meta.xml
<CustomField>
    <fullName>SEGMENT__c</fullName>
    <description>SEGMENT</description>
    <externalDeveloperName>SEGMENT</externalDeveloperName>
    <label>SEGMENT</label>
    <length>25</length>
    <type>Text</type>
</CustomField>