LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/SF_FLAG__c.field-meta.xml
<CustomField>
    <fullName>SF_FLAG__c</fullName>
    <description>SF_FLAG</description>
    <externalDeveloperName>SF_FLAG</externalDeveloperName>
    <label>SF_FLAG</label>
    <length>20</length>
    <type>Text</type>
</CustomField>