LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/SF_ID__c.field-meta.xml
<CustomField>
    <fullName>SF_ID__c</fullName>
    <description>SF_ID</description>
    <externalDeveloperName>SF_ID</externalDeveloperName>
    <label>SF_ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>