LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/SHARE_CAP__c.field-meta.xml
<CustomField>
    <fullName>SHARE_CAP__c</fullName>
    <description>SHARE_CAP</description>
    <externalDeveloperName>SHARE_CAP</externalDeveloperName>
    <label>SHARE_CAP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>