LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/SHARE_CAPITAL__c.field-meta.xml
<CustomField>
    <fullName>SHARE_CAPITAL__c</fullName>
    <description>SHARE_CAPITAL</description>
    <externalDeveloperName>SHARE_CAPITAL</externalDeveloperName>
    <label>SHARE_CAPITAL</label>
    <length>8</length>
    <type>Text</type>
</CustomField>