LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/STAT_AUDITOR__c.field-meta.xml
<CustomField>
    <fullName>STAT_AUDITOR__c</fullName>
    <description>STAT_AUDITOR</description>
    <externalDeveloperName>STAT_AUDITOR</externalDeveloperName>
    <label>STAT_AUDITOR</label>
    <length>150</length>
    <type>Text</type>
</CustomField>