LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/STATE_ID__c.field-meta.xml
<CustomField>
    <fullName>STATE_ID__c</fullName>
    <description>STATE_ID</description>
    <externalDeveloperName>STATE_ID</externalDeveloperName>
    <label>STATE_ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>