LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/STREET__c.field-meta.xml
<CustomField>
    <fullName>STREET__c</fullName>
    <description>STREET</description>
    <externalDeveloperName>STREET</externalDeveloperName>
    <label>STREET</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>