LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/SUB_INDUSTRY_ID__c.field-meta.xml
<CustomField>
    <fullName>SUB_INDUSTRY_ID__c</fullName>
    <description>SUB_INDUSTRY_ID</description>
    <externalDeveloperName>SUB_INDUSTRY_ID</externalDeveloperName>
    <label>SUB_INDUSTRY_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>