LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/SUB_SECTOR__c.field-meta.xml
<CustomField>
    <fullName>SUB_SECTOR__c</fullName>
    <description>SUB_SECTOR</description>
    <externalDeveloperName>SUB_SECTOR</externalDeveloperName>
    <label>SUB_SECTOR</label>
    <length>8</length>
    <type>Text</type>
</CustomField>