LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/SUBMIT_FLAG__c.field-meta.xml
<CustomField>
    <fullName>SUBMIT_FLAG__c</fullName>
    <description>SUBMIT_FLAG</description>
    <externalDeveloperName>SUBMIT_FLAG</externalDeveloperName>
    <label>SUBMIT_FLAG</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>