LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/TAN_NO__c.field-meta.xml
<CustomField>
    <fullName>TAN_NO__c</fullName>
    <description>TAN_NO</description>
    <externalDeveloperName>TAN_NO</externalDeveloperName>
    <label>TAN_NO</label>
    <length>25</length>
    <type>Text</type>
</CustomField>