LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/TAX_ADVISOR__c.field-meta.xml
<CustomField>
    <fullName>TAX_ADVISOR__c</fullName>
    <description>TAX_ADVISOR</description>
    <externalDeveloperName>TAX_ADVISOR</externalDeveloperName>
    <label>TAX_ADVISOR</label>
    <length>150</length>
    <type>Text</type>
</CustomField>