LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/TERITORY_IND_ID_TWO__c.field-meta.xml
<CustomField>
    <fullName>TERITORY_IND_ID_TWO__c</fullName>
    <description>TERITORY_IND_ID_TWO</description>
    <externalDeveloperName>TERITORY_IND_ID_TWO</externalDeveloperName>
    <label>TERITORY_IND_ID_TWO</label>
    <length>10</length>
    <type>Text</type>
</CustomField>