LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/TERTIARY_INDUSTRY__c.field-meta.xml
<CustomField>
    <fullName>TERTIARY_INDUSTRY__c</fullName>
    <description>TERTIARY_INDUSTRY</description>
    <externalDeveloperName>TERTIARY_INDUSTRY</externalDeveloperName>
    <label>TERTIARY_INDUSTRY</label>
    <length>25</length>
    <type>Text</type>
</CustomField>