LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/TEXT_INTERMEDIAT__c.field-meta.xml
<CustomField>
    <fullName>TEXT_INTERMEDIAT__c</fullName>
    <description>TEXT_INTERMEDIAT</description>
    <externalDeveloperName>TEXT_INTERMEDIAT</externalDeveloperName>
    <label>TEXT_INTERMEDIAT</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>