LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/TEXT_INVESTORS__c.field-meta.xml
<CustomField>
    <fullName>TEXT_INVESTORS__c</fullName>
    <description>TEXT_INVESTORS</description>
    <externalDeveloperName>TEXT_INVESTORS</externalDeveloperName>
    <label>TEXT_INVESTORS</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>