LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/TOT_EMP_NO__c.field-meta.xml
<CustomField>
    <fullName>TOT_EMP_NO__c</fullName>
    <description>TOT_EMP_NO</description>
    <externalDeveloperName>TOT_EMP_NO</externalDeveloperName>
    <label>TOT_EMP_NO</label>
    <length>8</length>
    <type>Text</type>
</CustomField>