LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/TOT_REVENUE__c.field-meta.xml
<CustomField>
    <fullName>TOT_REVENUE__c</fullName>
    <description>TOT_REVENUE</description>
    <externalDeveloperName>TOT_REVENUE</externalDeveloperName>
    <label>TOT_REVENUE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>