LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/TXT_INTERNAL_AUDITOR__c.field-meta.xml
<CustomField>
    <fullName>TXT_INTERNAL_AUDITOR__c</fullName>
    <description>TXT_INTERNAL_AUDITOR</description>
    <externalDeveloperName>TXT_INTERNAL_AUDITOR</externalDeveloperName>
    <label>TXT_INTERNAL_AUDITOR</label>
    <length>200</length>
    <type>Text</type>
</CustomField>