LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/TXT_TAX_ADVISOR__c.field-meta.xml
<CustomField>
    <fullName>TXT_TAX_ADVISOR__c</fullName>
    <description>TXT_TAX_ADVISOR</description>
    <externalDeveloperName>TXT_TAX_ADVISOR</externalDeveloperName>
    <label>TXT_TAX_ADVISOR</label>
    <length>200</length>
    <type>Text</type>
</CustomField>