LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/TYPE_OFJOB__c.field-meta.xml
<CustomField>
    <fullName>TYPE_OFJOB__c</fullName>
    <description>TYPE_OFJOB</description>
    <externalDeveloperName>TYPE_OFJOB</externalDeveloperName>
    <label>TYPE_OFJOB</label>
    <length>8</length>
    <type>Text</type>
</CustomField>