LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/WAS_CLIENT_REF__c.field-meta.xml
<CustomField>
    <fullName>WAS_CLIENT_REF__c</fullName>
    <description>WAS_CLIENT_REF</description>
    <externalDeveloperName>WAS_CLIENT_REF</externalDeveloperName>
    <label>WAS_CLIENT_REF</label>
    <length>8</length>
    <type>Text</type>
</CustomField>