LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/YOUNG_CSL__c.field-meta.xml
<CustomField>
    <fullName>YOUNG_CSL__c</fullName>
    <description>YOUNG_CSL</description>
    <externalDeveloperName>YOUNG_CSL</externalDeveloperName>
    <label>YOUNG_CSL</label>
    <length>8</length>
    <type>Text</type>
</CustomField>